--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ flutter_icons:
 
 flutter_native_splash:
   color: "#ffffff"
-  image: assets/images/Your Chief Splash.png
+  image: assets/images/Your Chef Splash.png
   android: true
   ios: true
   web: false
