--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   email_validator: ^2.1.17
   password_validator: ^0.0.1
   otp_text_field: ^1.1.3
+  #pinput: ^2.2.16
   image_picker: ^0.8.5+3
   ionicons: ^0.1.2
   path: ^1.8.0
